# secsec

./: .gitignore  Cargo.toml  IMPLEMENTATION.md  PROGRESS.md  README.md  finaldesign.md  finalrew.md  install.sh  secsec-Audit.md  secsec-Design.md  secsec-Fix-Plan.md  secsec-Implementation.md  secsec-UploadsGC.md
.cargo/: audit.toml  config.toml
.github/workflows/: ci.yml  release.yml
assets/icons/keyhole/: secsec-key.icns
assets/icons/lines/: secsec.icns
crates/secsec-aead/: Cargo.toml  README.md
crates/secsec-aead/src/: lib.rs
crates/secsec-aead/tests/: robustness.rs
crates/secsec-canon/: Cargo.toml  README.md
crates/secsec-canon/src/: lib.rs
crates/secsec-canon/tests/: robustness.rs
crates/secsec-chunk/: Cargo.toml  README.md
crates/secsec-chunk/src/: lib.rs
crates/secsec-client/: Cargo.toml  README.md
crates/secsec-client/src/: enroll.rs  gc.rs  gossip.rs  history.rs  lib.rs  multiremote.rs  pair.rs  prune.rs  quic.rs  repo.rs  sync.rs  testmem.rs  watcher.rs
crates/secsec-client/tests/: network_enroll.rs  recovery_restore.rs
crates/secsec-engine/: Cargo.toml  README.md
crates/secsec-engine/src/: lib.rs
crates/secsec-frame/: Cargo.toml  README.md
crates/secsec-frame/src/: lib.rs
crates/secsec-frame/tests/: robustness.rs
crates/secsec-fuzz/: Cargo.toml  README.md
crates/secsec-fuzz/src/: lib.rs
crates/secsec-kdf/: Cargo.toml  README.md
crates/secsec-kdf/src/: lib.rs
crates/secsec-keyslot/: Cargo.toml
crates/secsec-keyslot/src/: lib.rs
crates/secsec-object/: Cargo.toml  README.md
crates/secsec-object/src/: lib.rs
crates/secsec-pq/: Cargo.toml  README.md
crates/secsec-pq/src/: lib.rs
crates/secsec-proto/: Cargo.toml  README.md
crates/secsec-proto/src/: gc.rs  lib.rs  prune.rs  receipt.rs  server.rs  wire.rs
crates/secsec-recovery/: Cargo.toml  README.md
crates/secsec-recovery/src/: lib.rs
crates/secsec-roster/: Cargo.toml  README.md
crates/secsec-roster/src/: lib.rs
crates/secsec-server/: Cargo.toml  README.md
crates/secsec-server/src/: lib.rs  serve.rs
crates/secsec-sig/: Cargo.toml  README.md
crates/secsec-sig/src/: lib.rs
crates/secsec-snapshot/: Cargo.toml  README.md
crates/secsec-snapshot/src/: lib.rs
crates/secsec-store/: Cargo.toml  README.md
crates/secsec-store/src/: lib.rs
crates/secsec-sync/: Cargo.toml  README.md
crates/secsec-sync/src/: dag.rs  lib.rs  merge.rs  rollback.rs
crates/secsec-transport/: Cargo.toml  README.md
crates/secsec-transport/src/: auth.rs  frame.rs  handshake.rs  lib.rs  quic.rs  rpc.rs  stream.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: commit.rs  frame.rs  head.rs  object.rs  roster_entry.rs  tree.rs  wire.rs
ui/: README.md  install.sh  ui.conf.example
ui/gnome/secsec@nesdeq.github.io/: extension.js  metadata.json  prefs.js
ui/macos/: .gitignore  Info.plist  build.sh  com.secsec.ui.plist  secsec-menubar.swift
vectors/: README.md  secsec-kat-v1.txt
xtask/: Cargo.toml  README.md
xtask/src/: main.rs  vectors.rs
