# secsec — Cargo workspace. See IMPLEMENTATION.md for the crate map and build order.
[workspace]
resolver = "2"
members = ["crates/secsec-canon", "crates/secsec-aead", "crates/secsec-kdf", "crates/secsec-frame", "crates/secsec-chunk", "crates/secsec-object", "crates/secsec-store", "crates/secsec-snapshot", "crates/secsec-sig", "crates/secsec-keyslot", "crates/secsec-roster", "crates/secsec-sync", "crates/secsec-transport", "crates/secsec-proto", "crates/secsec-server", "crates/secsec-engine", "crates/secsec-client", "crates/secsec-recovery", "crates/secsec-fuzz", "bin/secsec", "xtask"]

[workspace.package]
edition = "2021"
rust-version = "1.85"          # floor (ssh-key MSRV); built with stable ≥ this
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }

[workspace.dependencies]
proptest = "1"

# Release profile: the security cores must not have overflow checks compiled out.
[profile.release]
overflow-checks = true
panic = "abort"
