[package]
name = "xtask"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Build tooling: mechanical KAT vector generation + reproducible musl release (secsec-Design.md §3, §20)."

[lints]
workspace = true

[dependencies]
secsec-kdf = { path = "../crates/secsec-kdf" }
secsec-frame = { path = "../crates/secsec-frame" }
secsec-aead = { path = "../crates/secsec-aead" }
secsec-object = { path = "../crates/secsec-object" }
secsec-sync = { path = "../crates/secsec-sync" }
secsec-proto = { path = "../crates/secsec-proto" }
secsec-roster = { path = "../crates/secsec-roster" }
secsec-transport = { path = "../crates/secsec-transport" }
