[package]
name = "secsec-aead"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CTX/CMT-4 fully-committing AEAD over ChaCha20-Poly1305 (finaldesign.md §9.4)."

[lints]
workspace = true

[dependencies]
chacha20 = { version = "0.9", features = ["zeroize"] }
poly1305 = { version = "0.8", features = ["zeroize"] }
blake3 = "1"
subtle = "2"
zeroize = "1"

[dev-dependencies]
chacha20poly1305 = "0.10"   # reference AEAD, used only to cross-check our raw tag in tests
proptest.workspace = true
