[package]
name = "secsec-client"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Client orchestration: object-closure + head push/pull over a Remote (finaldesign.md §10, §12, §14)."

[lints]
workspace = true

[dependencies]
secsec-store = { path = "../secsec-store" }
secsec-snapshot = { path = "../secsec-snapshot" }
secsec-object = { path = "../secsec-object" }
secsec-frame = { path = "../secsec-frame" }
secsec-kdf = { path = "../secsec-kdf" }
secsec-sync = { path = "../secsec-sync" }
secsec-engine = { path = "../secsec-engine" }
secsec-sig = { path = "../secsec-sig" }
blake3 = "1"

[dev-dependencies]
tempfile = "3"
getrandom = "0.3"
tokio = { version = "1", features = ["rt", "macros"] }
