[package]
name = "secsec-client"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Client orchestration: object-closure + head push/pull over a Remote (finaldesign.md §10, §12, §14)."

[lints]
workspace = true

[dependencies]
secsec-store = { path = "../secsec-store" }
secsec-snapshot = { path = "../secsec-snapshot" }
secsec-object = { path = "../secsec-object" }
secsec-frame = { path = "../secsec-frame" }
secsec-kdf = { path = "../secsec-kdf" }
secsec-canon = { path = "../secsec-canon" }
secsec-sync = { path = "../secsec-sync" }
secsec-engine = { path = "../secsec-engine" }
secsec-roster = { path = "../secsec-roster" }
secsec-keyslot = { path = "../secsec-keyslot" }
secsec-pq = { path = "../secsec-pq" }
secsec-sig = { path = "../secsec-sig" }
secsec-transport = { path = "../secsec-transport" }
secsec-proto = { path = "../secsec-proto" }
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring", "log"] }
notify = "8"
blake3 = "1"
getrandom = "0.3"
zeroize = "1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync"] }
secsec-server = { path = "../secsec-server" }
rcgen = "0.13"
