[package]
name = "secsec-fuzz"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Decoder fuzz harness: one entry per untrusted-input decoder (secsec-Design.md §3, §18)."

[lints]
workspace = true

[dependencies]
secsec-frame = { path = "../secsec-frame" }
secsec-canon = { path = "../secsec-canon" }
secsec-object = { path = "../secsec-object" }
secsec-snapshot = { path = "../secsec-snapshot" }
secsec-roster = { path = "../secsec-roster" }
secsec-sync = { path = "../secsec-sync" }
secsec-proto = { path = "../secsec-proto" }
secsec-kdf = { path = "../secsec-kdf" }
