[package]
name = "secsec-kdf"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "secsec key-derivation hierarchy: master-key generations and domain-separated subkeys (secsec-Design.md §5, §9.5)."

[lints]
workspace = true

[dependencies]
secsec-canon = { path = "../secsec-canon" }
blake3 = "1"
zeroize = "1"

[dev-dependencies]
secsec-aead = { path = "../secsec-aead" } # integration: derived obj_key feeds the AEAD
