[package]
name = "secsec-keyslot"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Per-device master-key wrap via HPKE, authenticity via mk_commit (finaldesign.md §8.3)."

[lints]
workspace = true

[dependencies]
hpke = { version = "0.12", features = ["x25519"] }
secsec-canon = { path = "../secsec-canon" }
secsec-kdf = { path = "../secsec-kdf" }
rand_core = { version = "0.6", features = ["getrandom"] }
zeroize = "1"
subtle = "2"

[dev-dependencies]
secsec-sig = { path = "../secsec-sig" }
