[package]
name = "secsec-object"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "secsec object plane: content addressing, seal/open with verify, and chunk padding (secsec-Design.md §9.2, §9.4, §9.7)."

[lints]
workspace = true

[dependencies]
secsec-kdf = { path = "../secsec-kdf" }
secsec-frame = { path = "../secsec-frame" }
secsec-aead = { path = "../secsec-aead" }
blake3 = "1"
subtle = "2"

[dev-dependencies]
secsec-chunk = { path = "../secsec-chunk" }
proptest.workspace = true
