[package]
name = "secsec-pq"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Hybrid post-quantum keyslot: X-Wing (ML-KEM-768 + X25519) master-key wrap (secsec-Design.md §17)."

[lints]
workspace = true

[dependencies]
secsec-aead = { path = "../secsec-aead" }
secsec-canon = { path = "../secsec-canon" }
libcrux-ml-kem = "0.0.9"
x25519-dalek = { version = "2", features = ["static_secrets"] }
sha3 = "0.10"
zeroize = "1"
getrandom = "0.3"

[dev-dependencies]
secsec-kdf = { path = "../secsec-kdf" } # integration: unwrapped key must satisfy mk_commit
