[package]
name = "secsec-proto"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Server-API per-op authorization: args_hash + write/read-auth signatures (secsec-Design.md §12, §9.6)."

[lints]
workspace = true

[dependencies]
secsec-sig = { path = "../secsec-sig" }
secsec-canon = { path = "../secsec-canon" }
secsec-frame = { path = "../secsec-frame" }
blake3 = "1"
ed25519-dalek = "2"
