[package]
name = "secsec-server"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Server request handler: §12 per-op authorization pipeline over the object store (finaldesign.md §12, §19)."

[lints]
workspace = true

[dependencies]
secsec-proto = { path = "../secsec-proto" }
secsec-store = { path = "../secsec-store" }
secsec-sig = { path = "../secsec-sig" }
secsec-frame = { path = "../secsec-frame" }
secsec-transport = { path = "../secsec-transport" }
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring", "log"] }
getrandom = "0.3"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros", "time", "net"] }
rcgen = "0.13"
