[package]
name = "secsec-sig"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Device identity and SSHSIG signing with disjoint namespaces, Ed25519-only (finaldesign.md §5, §9.6)."

[lints]
workspace = true

[dependencies]
ssh-key = { version = "0.6", features = ["ed25519"] }
rand_core = { version = "0.6", features = ["getrandom"] }
blake3 = "1"

[dev-dependencies]
