[package]
name = "secsec-sig"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Device identity and SSHSIG signing with disjoint namespaces, Ed25519-only (secsec-Design.md §5, §9.6)."

[lints]
workspace = true

[dependencies]
ssh-key = { version = "0.6", features = ["ed25519", "encryption"] }
sha2 = "0.10"                # SHA-512 for the X25519 secret-scalar derivation
rand_core = { version = "0.6", features = ["getrandom"] }
blake3 = "1"
zeroize = "1"

[dev-dependencies]
x25519-dalek = { version = "2", features = ["static_secrets"] }
