[package]
name = "secsec-snapshot"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Object graph (Tree/Commit) + directory snapshot and restore (secsec-Design.md §6, §9.2)."

[lints]
workspace = true

[dependencies]
secsec-canon = { path = "../secsec-canon" }
secsec-frame = { path = "../secsec-frame" }
secsec-kdf = { path = "../secsec-kdf" }
secsec-object = { path = "../secsec-object" }
secsec-chunk = { path = "../secsec-chunk" }
secsec-store = { path = "../secsec-store" }
secsec-sig = { path = "../secsec-sig" }
getrandom = "0.3"
filetime = "0.2"

[dev-dependencies]
tempfile = "3"
