[package]
name = "secsec-store"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Server-side content-addressed blob store over redb (secsec-Design.md §13)."

[lints]
workspace = true

[dependencies]
redb = "2"
blake3 = "1"

[dev-dependencies]
tempfile = "3"
