[package]
name = "secsec-transport"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "QUIC+TLS1.3 transport: pinned self-signed host-key verifier (finaldesign.md §11, risk R1)."

[lints]
workspace = true

[dependencies]
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "logging"] }
x509-cert = "0.2"
blake3 = "1"
subtle = "2"

[dev-dependencies]
rcgen = "0.13"
