[package]
name = "secsec-transport"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "QUIC+TLS1.3 transport: pinned self-signed host-key verifier (finaldesign.md §11, risk R1)."

[lints]
workspace = true

[dependencies]
secsec-sig = { path = "../secsec-sig" }
secsec-canon = { path = "../secsec-canon" }
secsec-frame = { path = "../secsec-frame" }
secsec-proto = { path = "../secsec-proto" }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "logging"] }
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring", "log"] }
x509-cert = "0.2"
blake3 = "1"
subtle = "2"
tokio = { version = "1", default-features = false, features = ["io-util"] }

[dev-dependencies]
rcgen = "0.13"
tokio = { version = "1", features = ["rt", "macros", "time", "net", "io-util"] }
